--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: ProjectMSAD
 description: > # this means to ignore newlines until "baseurl:"
   The kinda person who prefers plane tickets over cats.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "evening-temple-8118.herokuapp.com" # the base hostname & protocol for your site
+url: "project-msad.herokuapp.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
