--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: ProjectMSAD
 description: > # this means to ignore newlines until "baseurl:"
-  The kinda person who prefers plane tickets over cats.
+  The kind of person who prefers plane tickets over cats.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "project-msad.herokuapp.com" # the base hostname & protocol for your site
 
